samples/_failures_safe/1761449553_cd5f33_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b1fd4e9c.c: In function ‘main’:
./samples/SAFE/__tmp_b1fd4e9c.c:152:5: error: expected declaration or statement at end of input
  152 |     }
      |     ^
